--- a/codes/day-3/js-app/index.html
+++ b/codes/day-3/js-app/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <script src="./variables-datatypes.js"></script> -->
-    <script src="./operators.js"></script>
+    <!-- <script src="./operators.js"></script> -->
+    <!-- <script src="./control-flow-statements.js"></script> -->
+    <!-- <script src="./array-demo.js"></script> -->
+    <script src="./functions.js"></script>
 </head>
 
 <body>
